--- a/css/screen.css
+++ b/css/screen.css
@@ -21,9 +21,9 @@ ul, ol { list-style-type: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { * { -webkit-text-size-adjust: none; } }
 table { border-spacing: 0; border-collapse: collapse; width: 100%; }
 
-body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; min-width: 960px; }
+body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; -o-font-smoothing: antialiased; min-width: 960px; }
 
-.header .header__in, .page, .footer .footer__in { width: 940px; margin-left: auto; margin-right: auto; }
+.header .header__in, .nav, .page, .footer .footer__in { width: 940px; margin-left: auto; margin-right: auto; }
 
 .icon { display: inline-block; vertical-align: middle; }
 .icon.icon_phone { background: url('../img/icons-s721868c7c2.png') 0 -96px no-repeat; width: 16px; height: 16px; }
@@ -52,6 +52,14 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; min-wi
 .contacts a.contacts__callback:hover { text-decoration: none; }
 
 .basket { background: url("../img/basket.png") 8px 50% no-repeat; float: right; width: 220px; border: 2px solid #42885c; font-size: 12px; line-height: 16px; padding: 10px 10px 10px 60px; }
+
+.nav { margin-top: -21px; margin-bottom: 20px; }
+.nav > ul { padding: 0 20px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; background-color: #427255; background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, rgba(124, 183, 147, 0)), color-stop(100%, rgba(124, 183, 147, 0.5))); background-image: -webkit-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -moz-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -o-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); -webkit-box-shadow: 0 4px 0 #2c553c; -moz-box-shadow: 0 4px 0 #2c553c; box-shadow: 0 4px 0 #2c553c; }
+.nav > ul li { display: inline-block; vertical-align: middle; margin-left: 25px; }
+.nav > ul li:first-child { margin-left: 0; }
+.nav > ul li:hover a { color: #ffa200; text-decoration: underline; }
+.nav > ul li.is-active a { color: #b9e5ad; text-decoration: none; }
+.nav > ul a { display: block; font-size: 16px; color: white; text-decoration: none; line-height: 16px; padding: 12px 0; }
 
 .push, .footer { height: 156px; }
 
