--- a/css/screen.css
+++ b/css/screen.css
@@ -21,6 +21,12 @@ ul, ol { list-style-type: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { * { -webkit-text-size-adjust: none; } }
 table { border-spacing: 0; border-collapse: collapse; width: 100%; }
 
+.l-layout { overflow: hidden; }
+
+.l-sidebar { float: left; width: 220px; margin-right: 20px; }
+
+.l-main { overflow: hidden; }
+
 body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; -o-font-smoothing: antialiased; min-width: 960px; }
 
 .header .header__in, .nav, .page, .footer .footer__in { width: 940px; margin-left: auto; margin-right: auto; }
@@ -61,10 +67,30 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .nav > ul li.is-active a { color: #b9e5ad; text-decoration: none; }
 .nav > ul a { display: block; font-size: 16px; color: white; text-decoration: none; line-height: 16px; padding: 12px 0; }
 
-.push, .footer { height: 156px; }
+.site_push, .footer { height: 156px; }
 
 .footer { background: #f3f7f4; height: 156px; }
 .footer .footer__in { *zoom: 1; padding: 33px 0 10px; }
 .footer .footer__in:after { content: " "; display: table; clear: both; }
 .footer .footer__contacts { float: left; margin-left: 240px; }
 .footer .footer__info { float: left; font-size: 14px; color: #4f575c; line-height: 22px; margin-left: 20px; }
+
+.subnav { position: relative; margin-bottom: 30px; }
+.subnav.subnav_mod > ul > li { background: #fce1ec; }
+.subnav.subnav_mod > ul > li.subnav__title { border-color: #91278f; }
+.subnav.subnav_mod > ul > li.subnav__title > a { background: #91278f; }
+.subnav > ul > li { background: #f3f7f4; margin-top: -1px; border: 1px solid #d0e2d6; border-left-color: transparent; border-right-color: transparent; text-transform: uppercase; font-size: 11px; line-height: 14px; }
+.subnav > ul > li:first-child { margin-top: 0; }
+.subnav > ul > li:hover { background: white; border-color: #d0e2d6; }
+.subnav > ul > li:hover > a { color: #ffa200; border-color: #d0e2d6; }
+.subnav > ul > li.has-dropdown.is-active { border-color: #d0e2d6; border-right-color: transparent; }
+.subnav > ul > li.has-dropdown.is-active a { background: white; margin-right: -3px; position: relative; z-index: 101; border-color: #d0e2d6; border-right-color: transparent; }
+.subnav > ul > li.has-dropdown.is-active:hover a { color: #0a52a2; }
+.subnav > ul > li.has-dropdown.is-active .subnav__dropdown { display: block; }
+.subnav > ul > li.subnav__title { border-color: #437857; }
+.subnav > ul > li.subnav__title > a { background: #437857; color: white; border: none; padding: 5px 20px; }
+.subnav > ul > li > a { display: block; border: 1px solid transparent; padding: 10px 20px; color: #0a52a2; text-decoration: none; }
+.subnav .subnav__dropdown { display: none; position: absolute; left: 100%; top: 0; bottom: 0; width: 240px; background: white; z-index: 100; border: 2px solid #d0e2d6; padding: 20px 24px 20px 17px; }
+.subnav .subnav__dropdown li { margin-bottom: 25px; }
+.subnav .subnav__dropdown a { font-size: 12px; color: #0a52a2; text-decoration: none; }
+.subnav .subnav__dropdown a:hover { color: #ffa200 !important; }
