--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -116,11 +116,12 @@ body
 			line-height: 16px
 			padding: 12px 0
 
-
 .page
 	@extend %in
+	// padding-bottom: 40px
+	// overflow: hidden
 
-.push, .footer
+.site_push, .footer
 	height: 156px
 .footer
 	background: #f3f7f4
@@ -138,3 +139,92 @@ body
 		color: #4f575c
 		line-height: 22px
 		margin-left: 20px
+
+.subnav
+	position: relative
+	margin-bottom: 30px
+	&.subnav_mod
+		> ul
+			> li
+				background: #fce1ec
+				&.subnav__title
+					border-color: #91278f
+					> a
+						background: #91278f
+	> ul
+		> li
+			background: #f3f7f4
+			margin-top: -1px
+			border: 1px solid #d0e2d6
+			border-left-color: transparent
+			border-right-color: transparent
+			text-transform: uppercase
+			font-size: 11px
+			line-height: 14px
+			&:first-child
+				margin-top: 0
+			&:hover
+				background: #fff
+				// margin-top: -2px
+				// margin-bottom: -1px
+				border-color: #d0e2d6
+				> a
+					color: #ffa200
+					border-color: #d0e2d6
+					// border-width: 2px
+					// margin-bottom: -2px
+					// margin-top: -2px
+			&.has-dropdown
+				&.is-active
+					border-color: #d0e2d6
+					border-right-color: transparent
+					a
+						background: #fff
+						margin-right: -3px
+						position: relative
+						z-index: 101
+						border-color: #d0e2d6
+						border-right-color: transparent
+					&:hover
+						a
+							color: #0a52a2
+					.subnav__dropdown
+						display: block
+			&.subnav__title
+				border-color: #437857
+				> a
+					background: #437857
+					color: #fff
+					border: none
+					padding: 5px 20px
+			> a
+				display: block
+				// border: 1px solid #d0e2d6
+				border: 1px solid transparent
+				// border-left-color: transparent
+				// border-right-color: transparent
+				padding: 10px 20px
+				color: #0a52a2
+				text-decoration: none
+				// margin-top: -1px
+				// border-left-color: tranparent
+				// border-right-color: tranparent
+	.subnav__dropdown
+		display: none
+		position: absolute
+		left: 100%
+		top: 0
+		bottom: 0
+		width: 240px
+		background: #fff
+		z-index: 100
+		border: 2px solid #d0e2d6
+		padding: 20px 24px 20px 17px
+		li
+			margin-bottom: 25px
+		a
+			font-size: 12px
+			color: #0a52a2
+			text-decoration: none
+			&:hover
+				color: #ffa200 !important
