--- a/sass/_layouts.sass
+++ b/sass/_layouts.sass
@@ -1,27 +1,38 @@
-// default grid layout
-$gridWidth: 1170px
-$gridColumns: 12
-
-%in
-	width: ($gridWidth)
-	margin-left: auto
-	margin-right: auto
-
-.container
-	@extend %in
-
-.row
-	+clr
-	margin-left: -15px
-	margin-right: -15px
-
-%grid
+// default layout
+.l-layout
+	// +clr
+	overflow: hidden
+.l-sidebar
 	float: left
-	min-height: 1px
-	padding-left: 15px
-	padding-right: 15px
+	width: 220px
+	margin-right: 20px
+.l-main
+	overflow: hidden
 
-@for $i from 1 through $gridColumns
-	.col-#{$i}
-		@extend %grid
-		width: ($i / $gridColumns) * 100%
+// default grid layout
+// $gridWidth: 1170px
+// $gridColumns: 12
+
+// %in
+// 	width: ($gridWidth)
+// 	margin-left: auto
+// 	margin-right: auto
+
+// .container
+// 	@extend %in
+
+// .row
+// 	+clr
+// 	margin-left: -15px
+// 	margin-right: -15px
+
+// %grid
+// 	float: left
+// 	min-height: 1px
+// 	padding-left: 15px
+// 	padding-right: 15px
+
+// @for $i from 1 through $gridColumns
+// 	.col-#{$i}
+// 		@extend %grid
+// 		width: ($i / $gridColumns) * 100%
