--- a/css/screen.css
+++ b/css/screen.css
@@ -38,6 +38,10 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .icon.icon_megafon { background: url('../img/icons-s721868c7c2.png') 0 -122px no-repeat; width: 17px; height: 17px; }
 .icon.icon_beeline { background: url('../img/icons-s721868c7c2.png') 0 -70px no-repeat; width: 17px; height: 16px; }
 
+.btn { white-space: nowrap; display: inline-block; text-transform: uppercase; text-decoration: none; border: none; font-size: 10px; line-height: 16px; color: white; text-align: center; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; background-color: #427255; background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, rgba(124, 183, 147, 0)), color-stop(100%, rgba(124, 183, 147, 0.5))); background-image: -webkit-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -moz-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -o-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); -webkit-box-shadow: 0 2px 0 #2c553c; -moz-box-shadow: 0 2px 0 #2c553c; box-shadow: 0 2px 0 #2c553c; padding: 6px; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
+.btn:hover { background-color: #59a577; background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, rgba(124, 183, 147, 0)), color-stop(100%, rgba(124, 183, 147, 0.5))); background-image: -webkit-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -moz-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -o-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); }
+.btn:active { position: relative; top: 2px; -webkit-box-shadow: inset 0 1px 1px rgba(44, 85, 60, 0.75); -moz-box-shadow: inset 0 1px 1px rgba(44, 85, 60, 0.75); box-shadow: inset 0 1px 1px rgba(44, 85, 60, 0.75); background-color: #59a577; background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, rgba(124, 183, 147, 0)), color-stop(100%, rgba(124, 183, 147, 0.5))); background-image: -webkit-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -moz-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: -o-linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); background-image: linear-gradient(bottom, rgba(124, 183, 147, 0) 0%, rgba(124, 183, 147, 0.5) 100%); }
+
 .out { min-height: 100%; height: auto !important; height: 100%; margin: 0 auto -156px; }
 
 .header { background: #f3f7f4; height: 116px; color: #004c01; }
@@ -94,3 +98,15 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .subnav .subnav__dropdown li { margin-bottom: 25px; }
 .subnav .subnav__dropdown a { font-size: 12px; color: #0a52a2; text-decoration: none; }
 .subnav .subnav__dropdown a:hover { color: #ffa200 !important; }
+
+.search { margin-bottom: 45px; position: relative; }
+.search .search__row { background: #f0f0f4; padding: 24px 16px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; }
+.search .search__q { display: inline-block; width: 460px; border: 1px solid #d7d7e7; background: white; font-size: 14px; line-height: 18px; color: #595969; padding: 5px 10px; }
+.search .search__q:-moz-placeholder, .search .search__q::-moz-placeholder { color: #595969; opacity: 1; }
+.search .search__q::-webkit-input-placeholder { color: #595969; }
+.search .search__q:focus:-moz-placeholder, .search .search__q:focus::-moz-placeholder { color: transparent; opacity: 1; }
+.search .search__q:focus::-webkit-input-placeholder { color: transparent; }
+.search .search__btn { vertical-align: top; margin-left: 20px; width: 181px; }
+.search .search__order { position: absolute; top: 100%; right: 10px; border: 2px solid #f0f0f4; border-width: 0 2px 2px; width: 450px; padding: 4px 15px; }
+.search .search__ordertrigger { font-size: 12px; color: #0071bc; text-decoration: underline; display: block; text-align: right; }
+.search .search__ordertrigger:hover { text-decoration: none; }
