--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -24,6 +24,34 @@ body
 	&.icon_beeline
 		+s(beeline)
 
+.btn
+	white-space: nowrap
+	display: inline-block
+	text-transform: uppercase
+	text-decoration: none
+	border: none
+	font-size: 10px
+	line-height: 16px
+	color: #fff
+	text-align: center
+	+nosel
+	+border-radius(3px)
+	background-color: #427255
+	+background-image(linear-gradient(bottom, rgba(124,183,147,0) 0%, rgba(124,183,147,.5) 100%))
+	+box-shadow(0 2px 0 #2c553c)
+	padding: 6px
+	+transition(all .2s linear)
+	&:hover
+		background-color: #59a577
+		+background-image(linear-gradient(bottom, rgba(124,183,147,0) 0%, rgba(124,183,147,.5) 100%))
+	&:active
+		position: relative
+		top: 2px
+		+box-shadow(inset 0 1px 1px rgba(44,85,60,.75))
+		background-color: #59a577
+		+background-image(linear-gradient(bottom, rgba(124,183,147,0) 0%, rgba(124,183,147,.5) 100%))
+
+
 .out
 	min-height: 100%
 	height: auto !important
@@ -228,3 +256,51 @@ body
 			text-decoration: none
 			&:hover
 				color: #ffa200 !important
+
+.search
+	margin-bottom: 45px
+	position: relative
+	.search__row
+		background: #f0f0f4
+		padding: 24px 16px
+		+border-radius(5px)
+	.search__q
+		display: inline-block
+		width: 460px
+		border: 1px solid #d7d7e7
+		background: #fff
+		font-size: 14px
+		line-height: 18px
+		color: #595969
+		padding: 5px 10px
+		+placeholder-color(#595969)
+		&:focus
+			+placeholder-color(transparent)
+	.search__btn
+		vertical-align: top
+		margin-left: 20px
+		width: 181px
+	.search__order
+		position: absolute
+		top: 100%
+		right: 10px
+		border: 2px solid #f0f0f4
+		border-width: 0 2px 2px
+		width: 450px
+		padding: 4px 15px
+	.search__ordertrigger
+		font-size: 12px
+		color: #0071bc
+		text-decoration: underline
+		display: block
+		text-align: right
+		&:hover
+			text-decoration: none
+
+
+
+
+
+
+
+
