--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -50,6 +50,19 @@ body
 		+box-shadow(inset 0 1px 1px rgba(44,85,60,.75))
 		background-color: #59a577
 		+background-image(linear-gradient(bottom, rgba(124,183,147,0) 0%, rgba(124,183,147,.5) 100%))
+	&.btn-primary
+		background-color: #f16421
+		+background-image(linear-gradient(bottom, rgba(#f26621,0) 0%, rgba(#f27b23,.5) 100%))
+		+box-shadow(0 2px 0 #a0410c)
+		+transition(all .2s linear)
+		&:hover
+			background-color: #f7953e
+			+background-image(linear-gradient(bottom, rgba(#f7973f,0) 0%, rgba(#f7ad44,.5) 100%))
+		&:active
+			background-color: #f7953e
+			+box-shadow(inset 0 1px 1px rgba(160,65,12,.75))
+			+background-image(linear-gradient(bottom, rgba(#f7973f,0) 0%, rgba(#f7ad44,.5) 100%))
+
 
 
 .out
@@ -297,7 +310,103 @@ body
 		&:hover
 			text-decoration: none
 
-
+.catalog
+	.catalog__list
+		+clr
+		margin-left: -20px
+	.catalog__item
+		position: relative
+		float: left
+		width: 160px
+		margin-left: 20px
+		border: 2px solid #f0f0f5
+		&.is-new
+			.catalog__badge
+				+s(badge_new)
+			.catalog__pricevalue
+				color: #ed1c24
+		&.is-sale
+			.catalog__badge
+				+s(badge_sale)
+			.catalog__pricevalue
+				color: #ec008c
+		&.is-best
+			.catalog__badge
+				+s(badge_best)
+			.catalog__pricevalue
+				color: #0072bc
+	.catalog__badge
+		position: absolute
+		top: -2px
+		right: -2px
+		z-index: 1
+	.catalog__pic
+		position: relative
+		width: 156px
+		height: 137px
+		overflow: hidden
+		border-bottom: 1px solid #f0f0f5
+		img
+			display: block
+			width: 156px
+			height: auto
+	.catalog__picoverlay
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		text-align: center
+		line-height: 136px
+		background: rgba(#2c553c, .8)
+		font-size: 18px
+		color: #fff
+		text-decoration: none
+		text-transform: lowercase
+		+opacity(0)
+		+transition(all .2s linear)
+	.catalog__info
+		position: relative
+		&:hover
+			.catalog__descr
+				text-decoration: underline
+				color: #ffa200
+			.catalog__picoverlay
+				+opacity(1)
+	.catalog__hotzone
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		z-index: 1
+	.catalog__descr
+		margin: 6px 8px
+		font-size: 12px
+		color: #0071bc
+		line-height: 16px
+		height: 66px
+		overflow: hidden
+	.catalog__price
+		position: relative
+		text-align: center
+		font-size: 24px
+		line-height: 16px
+		padding-top: 20px
+		margin-bottom: 10px
+		color: #4f575c
+	.catalog__priceold
+		position: absolute
+		left: 0
+		width: 100%
+		top: -2px
+		font-size: 14px
+		text-decoration: line-through
+	.catalog__btn
+		text-align: center
+		margin: 0 8px 8px
+		.btn
+			display: block
 
 
 
