--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -320,6 +320,7 @@ body
 		width: 160px
 		margin-left: 20px
 		border: 2px solid #f0f0f5
+		margin-bottom: 20px
 		&.is-new
 			.catalog__badge
 				+s(badge_new)
@@ -408,7 +409,35 @@ body
 		.btn
 			display: block
 
+.proposals
+	margin-bottom: 20px
+	.proposals__list
+		+clr
+		margin-left: -20px
 
+.proposal
+	width: 340px
+	float: left
+	margin-left: 20px
+	margin-bottom: 20px
+	.proposal__content
+		height: 150px
+		overflow: hidden
+		border: 2px solid #f0f0f5
+		a
+		img
+			display: block
+			width: 100%
+			min-height: 146px
+	.proposal__more
+		font-size: 14px
+		margin-top: 8px
+		line-height: 1
+		a
+			color: #0071bc
+			text-decoration: underline
+			&:hover
+				text-decoration: none
 
 
 
