--- a/css/screen.css
+++ b/css/screen.css
@@ -147,3 +147,11 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .proposal .proposal__more { font-size: 14px; margin-top: 8px; line-height: 1; }
 .proposal .proposal__more a { color: #0071bc; text-decoration: underline; }
 .proposal .proposal__more a:hover { text-decoration: none; }
+
+.brands { margin-bottom: 40px; }
+.brands .brands__row { display: table; width: 100%; }
+.brands .brands__item { display: table-cell; vertical-align: middle; text-align: center; width: 14%; padding: 3px 0; }
+.brands .brands__item img { display: inline-block; vertical-align: middle; }
+.brands .brands__more { font-size: 14px; line-height: 1; margin-top: 15px; }
+.brands .brands__more a { color: #0071bc; text-decoration: underline; }
+.brands .brands__more a:hover { text-decoration: none; }
