--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -439,6 +439,28 @@ body
 			&:hover
 				text-decoration: none
 
-
+.brands
+	margin-bottom: 40px
+	.brands__row
+		display: table
+		width: 100%
+	.brands__item
+		display: table-cell
+		vertical-align: middle
+		text-align: center
+		width: 14%
+		padding: 3px 0
+		img
+			display: inline-block
+			vertical-align: middle
+	.brands__more
+		font-size: 14px
+		line-height: 1
+		margin-top: 15px
+		a
+			color: #0071bc
+			text-decoration: underline
+			&:hover
+				text-decoration: none
 
 
