--- a/css/screen.css
+++ b/css/screen.css
@@ -74,6 +74,8 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .nav > ul li.is-active a { color: #b9e5ad; text-decoration: none; }
 .nav > ul a { display: block; font-size: 16px; color: white; text-decoration: none; line-height: 16px; padding: 12px 0; }
 
+.page { padding-bottom: 40px; }
+
 .site_push, .footer { height: 156px; }
 
 .footer { background: #f3f7f4; height: 156px; }
@@ -155,3 +157,14 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .brands .brands__more { font-size: 14px; line-height: 1; margin-top: 15px; }
 .brands .brands__more a { color: #0071bc; text-decoration: underline; }
 .brands .brands__more a:hover { text-decoration: none; }
+
+.entries .entries__list { *zoom: 1; margin-left: -20px; }
+.entries .entries__list:after { content: " "; display: table; clear: both; }
+.entries .entries__item { float: left; width: 340px; height: 223px; overflow: hidden; margin-left: 20px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; background: #f0f0f5; line-height: 22px; padding: 15px 20px; margin-bottom: 15px; }
+.entries .entries__item p { color: #4f575c; font-size: 14px; }
+.entries .entries__title { font-size: 24px; color: #0071bc; }
+.entries .entries__title a { color: inherit; text-decoration: none; }
+.entries .entries__title a:hover { text-decoration: underline; }
+.entries .entries__more { font-size: 14px; line-height: 1; }
+.entries .entries__more a { color: #0071bc; text-decoration: underline; }
+.entries .entries__more a:hover { text-decoration: none; }
