--- a/css/screen.css
+++ b/css/screen.css
@@ -44,6 +44,7 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .btn.btn-primary { background-color: #f16421; background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, rgba(242, 102, 33, 0)), color-stop(100%, rgba(242, 123, 35, 0.5))); background-image: -webkit-linear-gradient(bottom, rgba(242, 102, 33, 0) 0%, rgba(242, 123, 35, 0.5) 100%); background-image: -moz-linear-gradient(bottom, rgba(242, 102, 33, 0) 0%, rgba(242, 123, 35, 0.5) 100%); background-image: -o-linear-gradient(bottom, rgba(242, 102, 33, 0) 0%, rgba(242, 123, 35, 0.5) 100%); background-image: linear-gradient(bottom, rgba(242, 102, 33, 0) 0%, rgba(242, 123, 35, 0.5) 100%); -webkit-box-shadow: 0 2px 0 #a0410c; -moz-box-shadow: 0 2px 0 #a0410c; box-shadow: 0 2px 0 #a0410c; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
 .btn.btn-primary:hover { background-color: #f7953e; background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, rgba(247, 151, 63, 0)), color-stop(100%, rgba(247, 173, 68, 0.5))); background-image: -webkit-linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); background-image: -moz-linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); background-image: -o-linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); background-image: linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); }
 .btn.btn-primary:active { background-color: #f7953e; -webkit-box-shadow: inset 0 1px 1px rgba(160, 65, 12, 0.75); -moz-box-shadow: inset 0 1px 1px rgba(160, 65, 12, 0.75); box-shadow: inset 0 1px 1px rgba(160, 65, 12, 0.75); background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, rgba(247, 151, 63, 0)), color-stop(100%, rgba(247, 173, 68, 0.5))); background-image: -webkit-linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); background-image: -moz-linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); background-image: -o-linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); background-image: linear-gradient(bottom, rgba(247, 151, 63, 0) 0%, rgba(247, 173, 68, 0.5) 100%); }
+.btn.btn-action { background-color: #0076a3; background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(-25%, rgba(0, 114, 182, 0.8)), color-stop(125%, rgba(255, 255, 255, 0.8))); background-image: -webkit-linear-gradient(bottom, rgba(0, 114, 182, 0.8) -25%, rgba(255, 255, 255, 0.8) 125%); background-image: -moz-linear-gradient(bottom, rgba(0, 114, 182, 0.8) -25%, rgba(255, 255, 255, 0.8) 125%); background-image: -o-linear-gradient(bottom, rgba(0, 114, 182, 0.8) -25%, rgba(255, 255, 255, 0.8) 125%); background-image: linear-gradient(bottom, rgba(0, 114, 182, 0.8) -25%, rgba(255, 255, 255, 0.8) 125%); padding: 4px 10px; -webkit-box-shadow: 0 2px 0 #004b80; -moz-box-shadow: 0 2px 0 #004b80; box-shadow: 0 2px 0 #004b80; }
 
 .out { min-height: 100%; height: auto !important; height: 100%; margin: 0 auto -156px; }
 
@@ -162,9 +163,24 @@ body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; -webki
 .entries .entries__list:after { content: " "; display: table; clear: both; }
 .entries .entries__item { float: left; width: 340px; height: 223px; overflow: hidden; margin-left: 20px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; background: #f0f0f5; line-height: 22px; padding: 15px 20px; margin-bottom: 15px; }
 .entries .entries__item p { color: #4f575c; font-size: 14px; }
-.entries .entries__title { font-size: 24px; color: #0071bc; }
+.entries .entries__title { font-size: 24px; color: #0071bc; margin-bottom: 5px; }
 .entries .entries__title a { color: inherit; text-decoration: none; }
 .entries .entries__title a:hover { text-decoration: underline; }
 .entries .entries__more { font-size: 14px; line-height: 1; }
 .entries .entries__more a { color: #0071bc; text-decoration: underline; }
 .entries .entries__more a:hover { text-decoration: none; }
+
+.partneradv { *zoom: 1; margin-bottom: 40px; border: 2px solid #73b4cf; background: #c8ecfb; }
+.partneradv:after { content: " "; display: table; clear: both; }
+.partneradv .partneradv__pic { float: left; width: 326px; height: 212px; overflow: hidden; }
+.partneradv .partneradv__pic img { display: block; min-width: 100%; height: auto; }
+.partneradv .partneradv__info { overflow: hidden; padding: 10px 8px 5px 33px; font-size: 14px; color: #48616c; line-height: 18px; }
+.partneradv .partneradv__text { padding-right: 55px; margin-bottom: 8px; }
+.partneradv .partneradv__text a { color: inherit; text-decoration: none; }
+.partneradv .partneradv__text a:hover { text-decoration: underline; }
+.partneradv .partneradv__subtitle { margin-bottom: 10px; }
+.partneradv .partneradv__title { font-size: 20px; text-transform: uppercase; color: #ff4e00; line-height: 23px; margin-bottom: 5px; }
+.partneradv .partneradv__action { *zoom: 1; }
+.partneradv .partneradv__action:after { content: " "; display: table; clear: both; }
+.partneradv .partneradv__action .btn { display: inline-block; }
+.partneradv .partneradv__action .btn:first-child { margin-right: 10px; }
