--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -62,8 +62,11 @@ body
 			background-color: #f7953e
 			+box-shadow(inset 0 1px 1px rgba(160,65,12,.75))
 			+background-image(linear-gradient(bottom, rgba(#f7973f,0) 0%, rgba(#f7ad44,.5) 100%))
-
-
+	&.btn-action
+		background-color: #0076a3
+		+background-image(linear-gradient(bottom, rgba(0,114,182,.8) -25%, rgba(255,255,255,.8) 125%))
+		padding: 4px 10px
+		+box-shadow(0 2px 0 #004b80)
 
 .out
 	min-height: 100%
@@ -484,6 +487,7 @@ body
 	.entries__title
 		font-size: 24px
 		color: #0071bc
+		margin-bottom: 5px
 		a
 			color: inherit
 			text-decoration: none
@@ -498,5 +502,58 @@ body
 			text-decoration: underline
 			&:hover
 				text-decoration: none
+
+.partneradv
+	+clr
+	margin-bottom: 40px
+	border: 2px solid #73b4cf
+	background: #c8ecfb
+	.partneradv__pic
+		float: left
+		width: 326px
+		height: 212px
+		overflow: hidden
+		img
+			display: block
+			min-width: 100%
+			height: auto
+	.partneradv__info
+		overflow: hidden
+		padding: 10px 8px 5px 33px
+		font-size: 14px
+		color: #48616c
+		line-height: 18px
+	.partneradv__text
+		padding-right: 55px
+		margin-bottom: 8px
+		a
+			color: inherit
+			text-decoration: none
+			&:hover
+				text-decoration: underline
+	.partneradv__subtitle
+		margin-bottom: 10px
+	.partneradv__title
+		font-size: 20px
+		text-transform: uppercase
+		color: #ff4e00
+		line-height: 23px
+		margin-bottom: 5px
+	.partneradv__descr
+		// margin-bottom: 8px
+	.partneradv__action
+		+clr
+		// margin-left: -20px
+		.btn
+			display: inline-block
+			// width: 160px
+			&:first-child
+				margin-right: 10px
+
+
+
+
+
+
 
 
