--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -1,5 +1,48 @@
++font("lato-regular", "lato-regular")
++font("lato-bold", "lato-bold")
++font("lato-black", "lato-black")
++font("lato-blackitalic", "lato-blackitalic")
++font("lato-medium", "lato-medium")
++font("lato-heavy", "lato-heavy")
++font("lato-heavyitalic", "lato-heavyitalic")
++font("lato-hairline", "lato-hairline")
+
+=lregular
+	font-family: "lato-regular"
+	font-weight: normal
+	font-style: normal
+=lbold
+	font-family: "lato-bold"
+	font-weight: normal
+	font-style: normal
+=lblack
+	font-family: "lato-black"
+	font-weight: normal
+	font-style: normal
+=lblackitalic
+	font-family: "lato-blackitalic"
+	font-weight: normal
+	font-style: normal
+=lmedium
+	font-family: "lato-medium"
+	font-weight: normal
+	font-style: normal
+=lheavy
+	font-family: "lato-heavy"
+	font-weight: normal
+	font-style: normal
+=lheavyitalic
+	font-family: "lato-heavyitalic"
+	font-weight: normal
+	font-style: normal
+=lhairline
+	font-family: "lato-hairline"
+	font-weight: normal
+	font-style: normal
+
 body
-	font-family: Arial, sans-serif
+	// font-family: Arial, sans-serif
+	+lregular
 	font-size: 14px
 	line-height: 1.4
 	+font-smoothing
@@ -25,6 +68,7 @@ body
 		+s(beeline)
 
 .btn
+	+lbold
 	white-space: nowrap
 	display: inline-block
 	text-transform: uppercase
@@ -95,24 +139,30 @@ body
 	float: left
 	+clr
 	.icon
+		float: left
+		margin-left: -21px
 		position: relative
-		top: -2px
-		margin-right: 5px
+		top: 2px
+		// margin-right: 5px
 		&.icon_mail
-			top: -1px
+			top: 7px
 	ul
 		float: left
 		margin-left: 15px
 		&:first-child
 			margin-left: 0
 	li
+		+lbold
 		font-size: 16px
 	a
 		display: block
 		color: #0a52a2
 		text-decoration: none
+		padding-left: 21px
 		// &:hover
 		// 	text-decoration: underline
+		&.contacts__mail
+			+lheavy
 		&.contacts__callback
 			font-size: 12px
 			text-decoration: underline
@@ -120,6 +170,7 @@ body
 				text-decoration: none
 
 .basket
+	+lbold
 	background: url("../img/basket.png") 8px 50% no-repeat
 	float: right
 	width: 220px
@@ -153,6 +204,7 @@ body
 					color: #b9e5ad
 					text-decoration: none
 		a
+			// +lregular
 			display: block
 			font-size: 16px
 			color: #fff
@@ -187,6 +239,7 @@ body
 .subnav
 	position: relative
 	margin-bottom: 30px
+	+lbold
 	&.subnav_mod
 		> ul
 			> li
@@ -222,7 +275,7 @@ body
 				&.is-active
 					border-color: #d0e2d6
 					border-right-color: transparent
-					a
+					> a
 						background: #fff
 						margin-right: -3px
 						position: relative
@@ -230,17 +283,20 @@ body
 						border-color: #d0e2d6
 						border-right-color: transparent
 					&:hover
-						a
+						> a
 							color: #0a52a2
 					.subnav__dropdown
-						display: block
+						opacity: 1
+						left: 100%
+						visibility: visible
 			&.subnav__title
+				+lblack
 				border-color: #437857
 				> a
 					background: #437857
 					color: #fff
 					border: none
-					padding: 5px 20px
+					padding: 5px 10px 5px 20px
 			> a
 				display: block
 				// border: 1px solid #d0e2d6
@@ -254,9 +310,9 @@ body
 				// border-left-color: tranparent
 				// border-right-color: tranparent
 	.subnav__dropdown
-		display: none
+		opacity: 0
 		position: absolute
-		left: 100%
+		left: -100%
 		top: 0
 		bottom: 0
 		width: 240px
@@ -264,14 +320,53 @@ body
 		z-index: 100
 		border: 2px solid #d0e2d6
 		padding: 20px 24px 20px 17px
+		+transition(all .1s linear)
+		visibility: hidden
 		li
 			margin-bottom: 25px
+			a
+				font-size: 12px
+				color: #0a52a2
+				text-decoration: none
+				text-transform: none
+				&:hover
+					color: #ffa200 !important
+	.subnav__sale
+		background: #d84002
+		margin-top: 30px
+		border: 2px solid #f0f0f5
+		font-size: 12px
+		+lbold
+		text-transform: uppercase
+		color: #fff
+		height: 98px
+		line-height: 98px
+		text-align: center
 		a
-			font-size: 12px
-			color: #0a52a2
+			display: block
+			height: 100%
+			color: #fff
 			text-decoration: none
-			&:hover
-				color: #ffa200 !important
+			span
+				display: inline-block
+				vertical-align: middle
+				line-height: 14px
+
+.input
+	+lheavyitalic
+	display: block
+	width: 100%
+	// display: inline-block
+	// width: 460px
+	border: 1px solid #d7d7e7
+	background: #fff
+	font-size: 14px
+	line-height: 18px
+	color: #595969
+	padding: 5px 10px
+	+placeholder-color(#595969)
+	&:focus
+		+placeholder-color(transparent)
 
 .search
 	margin-bottom: 45px
@@ -283,16 +378,8 @@ body
 	.search__q
 		display: inline-block
 		width: 460px
-		border: 1px solid #d7d7e7
-		background: #fff
-		font-size: 14px
-		line-height: 18px
-		color: #595969
-		padding: 5px 10px
-		+placeholder-color(#595969)
-		&:focus
-			+placeholder-color(transparent)
 	.search__btn
+		// +lbold
 		vertical-align: top
 		margin-left: 20px
 		width: 181px
@@ -304,7 +391,10 @@ body
 		border-width: 0 2px 2px
 		width: 450px
 		padding: 4px 15px
+		z-index: 1050
+		background: #fff
 	.search__ordertrigger
+		+lbold
 		font-size: 12px
 		color: #0071bc
 		text-decoration: underline
@@ -312,6 +402,24 @@ body
 		text-align: right
 		&:hover
 			text-decoration: none
+	.search__form
+		padding-top: 20px
+		padding-bottom: 15px
+	.search__formrow
+		+clr
+		margin-top: 5px
+		.btn
+			display: block
+			width: 181px
+			margin-top: 10px
+		&:first-child
+			margin-top: 0
+		&.search__formrow_mod
+			.input
+				float: right
+				width: 200px
+				&:first-child
+					float: left
 
 .catalog
 	.catalog__list
@@ -355,6 +463,7 @@ body
 			width: 156px
 			height: auto
 	.catalog__picoverlay
+		+lregular
 		position: absolute
 		top: 0
 		left: 0
@@ -385,6 +494,7 @@ body
 		height: 100%
 		z-index: 1
 	.catalog__descr
+		+lbold
 		margin: 6px 8px
 		font-size: 12px
 		color: #0071bc
@@ -392,6 +502,7 @@ body
 		height: 66px
 		overflow: hidden
 	.catalog__price
+		+lblack
 		position: relative
 		text-align: center
 		font-size: 24px
@@ -400,6 +511,7 @@ body
 		margin-bottom: 10px
 		color: #4f575c
 	.catalog__priceold
+		+lmedium
 		position: absolute
 		left: 0
 		width: 100%
@@ -433,6 +545,7 @@ body
 			width: 100%
 			min-height: 146px
 	.proposal__more
+		+lbold
 		font-size: 14px
 		margin-top: 8px
 		line-height: 1
@@ -457,6 +570,7 @@ body
 			display: inline-block
 			vertical-align: middle
 	.brands__more
+		+lbold
 		font-size: 14px
 		line-height: 1
 		margin-top: 15px
@@ -471,6 +585,7 @@ body
 		+clr
 		margin-left: -20px
 	.entries__item
+		// +lregular
 		float: left
 		width: 340px
 		height: 223px
@@ -485,6 +600,7 @@ body
 			color: #4f575c
 			font-size: 14px
 	.entries__title
+		+lblackitalic
 		font-size: 24px
 		color: #0071bc
 		margin-bottom: 5px
@@ -494,6 +610,7 @@ body
 			&:hover
 				text-decoration: underline
 	.entries__more
+		+lbold
 		font-size: 14px
 		line-height: 1
 		// margin-top: 12px
@@ -524,6 +641,7 @@ body
 		color: #48616c
 		line-height: 18px
 	.partneradv__text
+		+lbold
 		padding-right: 55px
 		margin-bottom: 8px
 		a
@@ -534,6 +652,7 @@ body
 	.partneradv__subtitle
 		margin-bottom: 10px
 	.partneradv__title
+		+lblack
 		font-size: 20px
 		text-transform: uppercase
 		color: #ff4e00
